<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="translation_base_host"
        android:title="@string/translation_base_host"
        app:allowDividerAbove="true" />

    <Preference
        android:key="translation_base_port"
        android:title="@string/translation_base_port"
        app:allowDividerAbove="true" />

    <Preference
        android:key="translation_test_connection"
        android:title="@string/translation_config_test"
        app:allowDividerAbove="true" />

    <ListPreference
        android:defaultValue="local"
        android:entries="@array/default_translation_method_entries"
        android:entryValues="@array/default_translation_method_values"
        android:key="translation_default_method"
        android:title="@string/translation_default_method"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true" />

    <Preference
        android:key="ai_model_setting"
        android:title="@string/settings_ai_provider"
        android:summary=""
        app:allowDividerAbove="true" />

    <Preference
        android:key="text_translation_provider"
        android:title="@string/text_translation_provider_title"
        app:allowDividerAbove="true" />

    <Preference
        android:key="target_language_setting"
        android:title="@string/target_language_title"
        app:allowDividerAbove="true" />

    <Preference
        android:key="gemini_common_prompt"
        android:title="@string/gemini_common_prompt"
        app:allowDividerAbove="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="save_debug_merged"
        android:title="@string/save_debug_merged_title"
        app:summaryOff="@string/save_debug_merged_off"
        app:summaryOn="@string/save_debug_merged_on" />

</PreferenceScreen>
